--- a/src/app/detail-tour/detail-tour.page.html
+++ b/src/app/detail-tour/detail-tour.page.html
@@ -48,13 +48,13 @@
 
               <ion-grid>
                 <ion-row>
-                  <ion-col size="6">
+                  <ion-col size="7">
                     <ion-label>
                       <h2><b>{{tmp.englishname}}</b></h2>
                       <h3>{{tmp.thainame}}</h3>
                     </ion-label>
                   </ion-col>
-                  <ion-col size="6">
+                  <ion-col size="5">
                     <ion-label>
                       <h3 class="ion-text-right">
                         <ion-text color="danger">
@@ -79,10 +79,20 @@
                 <ion-icon name="fast-food-outline"></ion-icon
                 >&nbsp;{{tmp.icon3}}<br />
               </ion-card-content>
-              <ion-card-content>
-                <ion-icon color="danger" name="alert-circle-outline"></ion-icon>
-                <ion-text style="color: red"> หมายเหตุ การใช้งานแพ็คเกจ </ion-text>
-                <ion-card-subtitle>
+            </ion-card>
+            <ion-accordion-group color="tertiary" mode="ios">
+            <ion-accordion
+              value="start"
+              color="tertiary"
+              toggle-icon="arrow-down-circle"
+            >
+              <ion-item slot="header" color="tertiary">
+              <ion-icon color="danger" name="alert-circle-outline"></ion-icon>
+                <ion-label color="danger" style="font-size: 15px;">&nbsp;&nbsp;หมายเหตุ การใช้งานแพ็คเกจ</ion-label>
+                <ion-chip color="danger"> <ion-label color="danger">กด</ion-label></ion-chip>
+              </ion-item>
+              <ion-card-header slot="content" color="tertiary">
+              <ion-card-subtitle >
                   - ท่านสามารถเลือกวันเข้าพักได้ทุกวัน<br />
                   - โปรโมชั่น 3 วัน 2 คืน สำหรับจอง 2 ท่าน ขึ้นไป<br />
                   - เลือกจองเข้าพักได้ วันที่ 1 พ.ค. ถึง 31 ต.ค. 65 ชำระท่านละ
@@ -102,8 +112,9 @@
                   - ติดต่อเพื่อเช็คห้องว่างล่วงหน้า 14 - 21 วัน<br />
                   - อายุการใช้งาน โปรโมชั่น แพ็คเกจ : 31 ต.ค. 2565<br />
                 </ion-card-subtitle>
-              </ion-card-content>
-            </ion-card>
+                </ion-card-header>
+            </ion-accordion>
+          </ion-accordion-group>
           </ion-list>
 
           <br />
